# terebellum

./: .gitignore  Cargo.toml  README.md
src/: inference.rs  lib.rs  main.rs  model.rs  training.rs
src/data/: batcher.rs  dataset.rs  tokenizer.rs
