[package]
name = "terebellum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.13.2", features = ["train", "wgpu", "fusion", "autotune", "sqlite-bundled"] }
derive-new = "0.6.0"
serde = { version = "1.0.202", features = ["derive"] }
tokenizers = { version = "0.19.1", features = ["http"] }

[profile.release]
lto = true
codegen-units = 1
